style.css
/* ... */
  .submitBtn {
      background-color: green;
      margin-bottom: 3%;
      margin-top: 3%;
      text-decoration: none;
      color: #fefff3;
  }

  #contact .email-signup input:hover, .submitBtn:hover, textarea:hover {
    transform: translateY(-3px);
    transition: .2s ease-in-out;
    box-shadow: 0 10px 50px -5px rgba(0, 0, 0, 0.2), 0 30px 20px -5px rgba(0, 0, 0, 0.2);
}

/* --------- checkbox css ---------- */
.container {
    display: inline-block;
    position: relative;
    text-align: center;
    margin-bottom: 25px;
    margin-top: 15px;
    cursor: pointer;
    font-size: 22px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    width: 200px;
  }
  
  /* Hide the browser's default checkbox */
  .container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
  }
  
  /* custom checkbox */
  .checkmark {
    position: absolute;
    top: 100%;
    right: 44%;
    height: 30px;
    width: 30px;
    background-color: #fefff3;
    margin-top: 1%;
    margin-bottom: 1%;
    text-align: center;
  }
  
  .container:hover input ~ .checkmark {
    background-color: #ecece2;
  }
  
  .container input:checked ~ .checkmark {
    background-color: green;
  }
  
  /* checkmark/indicator */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  /* checkmark when checked */
  .container input:checked ~ .checkmark:after {
    display: inline-block;
  }
  
  /* checkmark/indicator */
  .container .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }

  .container label {
      margin-bottom: 5%;
  }

/* --------- Promise --------- */
.promise {
    background-color: rgba(51, 50, 51, 0.397);
    background-image: url('/images2/marek-piwnicki-unsplash.jpg'); /*url('/marek-piwnicki-unsplash.jpg');*/
    background-size: cover;
    height: 80vh;
    padding-top: 3%;
    padding-bottom: 3%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    color: #fefff3;
}
    .promise h2 {
        padding-bottom: 5%;
        text-align: center;
    }
    .promise p {
        padding-left: 10%;
        padding-right: 10%;
        text-align: left;
    }

/* -------- Footer ---------- */

.footer {
    padding: 5%;
    display: flex;
    justify-content: center;
    background-color: #fefff3;
    font-family: 'ms madi', cursive;
    font-size: 22px;
    background-image: linear-gradient(rgba(80, 2, 170, 0.336), rgb(255, 253, 238), rgb(255, 253, 238));
}
.footer p {
    border-top: 1px solid black;
}
.footer-a {
    font-family: 'roboto', sans-serif;
    font-size: 16px;
    text-decoration: none;
    color: inherit;
    border-bottom: 1px solid black;
    cursor: pointer;
}
    .footer-a:hover {
        color: rgb(63, 63, 63);
        border-bottom: 1px solid rgb(63, 63, 63);
    }

/* -------- MEDIA QUERIES ---------- */

@media (max-width:700px) {

/* mobile nav menu */

.mobile-hide {
    display: none;
}
.mobile-nav {
    display: block;
}
.menu-line {
    width: 20px;
    height: 3px;
    background-color: rgb(63, 63, 63);
    margin-bottom: 4px;
}

/* mobile header */

.header-img {
    background-position: bottom;
    height: 30vh;
}

.header-text {
    color: #fefff3;
    display: flex;
    justify-content: center;
    /*padding-top: 8%;
    padding-bottom: 8%;*/
    font-size: 25px;
}

/* mobile welcome */
.welcome {
    flex-direction: column;
    padding-bottom: 18%;
}
.welcome h1 {
    margin: 0;
    padding: 8%;
    text-align: center;
}
.welcome p {
    justify-content: center;
    margin: 0;
    padding: 7%;
}

/* mobile about */
.about {
    flex-direction: column;
    padding-top: 10%;
    padding-bottom: 10%;
}

.about-img {
    margin: auto;
    height: 300px;
    width: 200px;
    text-align: center;
}

.about-text h2 {
    padding-top: 8%;
}

/* mobile services */
.coaching {
    flex-direction: column;
}
.service-left, .service-right {
    margin: auto;
    padding: 5%;
}
.service-left {
    margin-bottom: 8%;
}
.services {
    background-position: right;
    height: auto;
    color: rgb(63, 63, 63);
}

.servicePaddingH {
    padding-top: 25%;
}

.servicePaddingP {
    padding-bottom: 20%;
}

/* Mobile cards */
.card {
    padding-bottom: 6%;
}

.reviewH {
    padding-top: 15%;
}
.reviewP {
    padding-bottom: 12%;
}

.reviews {
    padding-bottom: 8%;
}

/* Mobile Coming Soon Form */


  .email-signup input, #contact .email-signup input {
    width: 250px;
  }

  textarea {
      width: 255px;
      max-width: 255px;
      padding: 2%;
  }

  .button-solid, .submitBtn {
    border-left: 1px solid green;
    border-right: 1px solid green;
    border-top: 2px solid green;
    border-bottom: 2px solid green;
    width: 250px;
  }

  .contact {
    text-align: center;
  }
  .form {
    margin-bottom: 3%;
    padding-top: 5%;
    padding-bottom: 5%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .formH2 {
      padding-left: 5%;
      padding-right: 5%;
  }

  .checkmark {
      right: 47%;
  }

  .coming-soon {
      padding-top: 10%;
      padding-bottom: 12%;
  }


/* mobile promise */
.promise {
    padding-top: 8%;
    padding-bottom: 8%;
}


}

